# dotSpot

./: .gitignore  LICENSE  README.md  dotspot.py  pyproject.toml  run.sh
checks/: __init__.py  ai_overview.py  base64_decode.py  comments.py  cookies.py  exposed_paths.py  js_analysis.py  sqli.py  ssti.py
core/: crawler.py  reporter.py  scanner.py
data/: paths.txt  payloads.json  prompt.txt
ui/: banner.py  prompts.py
utils/: __init__.py  diff.py  http.py  patterns.py
